@@ -114,6 +114,11 @@ particular example.</p>
 <a href="jsobject/output/TestDict.html">see demo2</a> |
 <a href="jsobject/">source directory</a><p>
 
+<h2>jsimport</h2>
+<p>javascript import example<br />
+<a href="jsimport/output/examplejs.html">see demo</a> |
+<a href="jsimport/">source directory</a><p>
+
 <h2>splitpanel</h2>
 <p>splitpanel example<br />
 <a href="splitpanel/output/SplitPanel.html">see demo</a> |
