@@ -1,0 +1,4 @@
+examplevar = 'Unaltered';
+function get_examplevar( ) {
+        return examplevar;
+}
